src/test/deca/test_compilateur/context/invalid/created/binary_exp/op_bool/or_A_boolean.deca
// Description :
//    test or entre un A et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Type gauche A. Type droit boolean Type attendu: ‘boolean’
class A{}
{
A a;
boolean b;
boolean c = a || b;
}
